angr/c_expr_eval/CexprParser.py
# pylint: skip-file
# Generated from Cexpr.g4 by ANTLR 4.11.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CexprParser ( Parser ):

    grammarFileName = "Cexpr.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'('", "')'", "'['", "']'", "'{'", "'}'", 
                     "'<'", "'<='", "'>'", "'>='", "'<<'", "'>>'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'&'", "'|'", "'&&'", "'||'", 
                     "'^'", "'!'", "'~'", "'?'", "':'", "';'", "','", "'=='", 
                     "'!='", "'->'", "'.'" ]

    symbolicNames = [ "<INVALID>", "LeftParen", "RightParen", "LeftBracket", 
                      "RightBracket", "LeftBrace", "RightBrace", "Less", 
                      "LessEqual", "Greater", "GreaterEqual", "LeftShift", 
                      "RightShift", "Plus", "Minus", "Star", "Div", "Mod", 
                      "And", "Or", "AndAnd", "OrOr", "Caret", "Not", "Tilde", 
                      "Question", "Colon", "Semi", "Comma", "Equal", "NotEqual", 
                      "Arrow", "Dot", "Identifier", "Constant", "DigitSequence", 
                      "StringLiteral", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_postfixExpr = 0
    RULE_typedExpr = 1
    RULE_refExpr = 2
    RULE_baseExpr = 3
    RULE_multiplicativeExpr = 4
    RULE_additiveExpr = 5
    RULE_shiftExpr = 6
    RULE_relationalExpr = 7
    RULE_equalityExpr = 8
    RULE_bitAndExpr = 9
    RULE_bitXorExpr = 10
    RULE_bitOrExpr = 11
    RULE_logicalAndExpr = 12
    RULE_logicalOrExpr = 13
    RULE_expression = 14
    RULE_typeName = 15
    RULE_typePrim = 16

    ruleNames =  [ "postfixExpr", "typedExpr", "refExpr", "baseExpr", "multiplicativeExpr", 
                   "additiveExpr", "shiftExpr", "relationalExpr", "equalityExpr", 
                   "bitAndExpr", "bitXorExpr", "bitOrExpr", "logicalAndExpr", 
                   "logicalOrExpr", "expression", "typeName", "typePrim" ]

    EOF = Token.EOF
    LeftParen=1
    RightParen=2
    LeftBracket=3
    RightBracket=4
    LeftBrace=5
    RightBrace=6
    Less=7
    LessEqual=8
    Greater=9
    GreaterEqual=10
    LeftShift=11
    RightShift=12
    Plus=13
    Minus=14
    Star=15
    Div=16
    Mod=17
    And=18
    Or=19
    AndAnd=20
    OrOr=21
    Caret=22
    Not=23
    Tilde=24
    Question=25
    Colon=26
    Semi=27
    Comma=28
    Equal=29
    NotEqual=30
    Arrow=31
    Dot=32
    Identifier=33
    Constant=34
    DigitSequence=35
    StringLiteral=36
    Whitespace=37
    Newline=38
    BlockComment=39
    LineComment=40

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.11.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class PostfixExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CexprParser.Identifier, 0)

        def LeftParen(self):
            return self.getToken(CexprParser.LeftParen, 0)

        def refExpr(self):
            return self.getTypedRuleContext(CexprParser.RefExprContext,0)


        def RightParen(self):
            return self.getToken(CexprParser.RightParen, 0)

        def postfixExpr(self):
            return self.getTypedRuleContext(CexprParser.PostfixExprContext,0)


        def LeftBracket(self):
            return self.getToken(CexprParser.LeftBracket, 0)

        def expression(self):
            return self.getTypedRuleContext(CexprParser.ExpressionContext,0)


        def RightBracket(self):
            return self.getToken(CexprParser.RightBracket, 0)

        def Dot(self):
            return self.getToken(CexprParser.Dot, 0)

        def Arrow(self):
            return self.getToken(CexprParser.Arrow, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_postfixExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPostfixExpr" ):
                listener.enterPostfixExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPostfixExpr" ):
                listener.exitPostfixExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPostfixExpr" ):
                return visitor.visitPostfixExpr(self)
            else:
                return visitor.visitChildren(self)



    def postfixExpr(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = CexprParser.PostfixExprContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 0
        self.enterRecursionRule(localctx, 0, self.RULE_postfixExpr, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 40
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [33]:
                self.state = 35
                self.match(CexprParser.Identifier)
                pass
            elif token in [1]:
                self.state = 36
                self.match(CexprParser.LeftParen)
                self.state = 37
                self.refExpr()
                self.state = 38
                self.match(CexprParser.RightParen)
                pass
            else:
                raise NoViableAltException(self)

            self._ctx.stop = self._input.LT(-1)
            self.state = 55
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,2,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    self.state = 53
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
                    if la_ == 1:
                        localctx = CexprParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 42
                        if not self.precpred(self._ctx, 4):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 4)")
                        self.state = 43
                        self.match(CexprParser.LeftBracket)
                        self.state = 44
                        self.expression()
                        self.state = 45
                        self.match(CexprParser.RightBracket)
                        pass

                    elif la_ == 2:
                        localctx = CexprParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 47
                        if not self.precpred(self._ctx, 3):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 3)")
                        self.state = 48
                        self.match(CexprParser.Dot)
                        self.state = 49
                        self.match(CexprParser.Identifier)
                        pass

                    elif la_ == 3:
                        localctx = CexprParser.PostfixExprContext(self, _parentctx, _parentState)
                        self.pushNewRecursionContext(localctx, _startState, self.RULE_postfixExpr)
                        self.state = 50
                        if not self.precpred(self._ctx, 2):
                            from antlr4.error.Errors import FailedPredicateException
                            raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")
                        self.state = 51
                        self.match(CexprParser.Arrow)
                        self.state = 52
                        self.match(CexprParser.Identifier)
                        pass

             
                self.state = 57
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,2,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class TypedExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LeftParen(self):
            return self.getToken(CexprParser.LeftParen, 0)

        def typeName(self):
            return self.getTypedRuleContext(CexprParser.TypeNameContext,0)


        def RightParen(self):
            return self.getToken(CexprParser.RightParen, 0)

        def typedExpr(self):
            return self.getTypedRuleContext(CexprParser.TypedExprContext,0)


        def postfixExpr(self):
            return self.getTypedRuleContext(CexprParser.PostfixExprContext,0)


        def getRuleIndex(self):
            return CexprParser.RULE_typedExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTypedExpr" ):
                listener.enterTypedExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTypedExpr" ):
                listener.exitTypedExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTypedExpr" ):
                return visitor.visitTypedExpr(self)
            else:
                return visitor.visitChildren(self)




    def typedExpr(self):

        localctx = CexprParser.TypedExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_typedExpr)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.match(CexprParser.LeftParen)
                self.state = 59
                self.typeName()
                self.state = 60
                self.match(CexprParser.RightParen)
                self.state = 61
                self.typedExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 63
                self.postfixExpr(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RefExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def refExpr(self):
            return self.getTypedRuleContext(CexprParser.RefExprContext,0)


        def And(self):
            return self.getToken(CexprParser.And, 0)

        def Star(self):
            return self.getToken(CexprParser.Star, 0)

        def typedExpr(self):
            return self.getTypedRuleContext(CexprParser.TypedExprContext,0)


        def getRuleIndex(self):
            return CexprParser.RULE_refExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRefExpr" ):
                listener.enterRefExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRefExpr" ):
                listener.exitRefExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRefExpr" ):
                return visitor.visitRefExpr(self)
            else:
                return visitor.visitChildren(self)




    def refExpr(self):

        localctx = CexprParser.RefExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_refExpr)
        self._la = 0 # Token type
        try:
            self.state = 69
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [15, 18]:
                self.enterOuterAlt(localctx, 1)
                self.state = 66
                _la = self._input.LA(1)
                if not(_la==15 or _la==18):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 67
                self.refExpr()
                pass
            elif token in [1, 33]:
                self.enterOuterAlt(localctx, 2)
                self.state = 68
                self.typedExpr()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BaseExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseExpr(self):
            return self.getTypedRuleContext(CexprParser.BaseExprContext,0)


        def Plus(self):
            return self.getToken(CexprParser.Plus, 0)

        def Minus(self):
            return self.getToken(CexprParser.Minus, 0)

        def Tilde(self):
            return self.getToken(CexprParser.Tilde, 0)

        def Not(self):
            return self.getToken(CexprParser.Not, 0)

        def Constant(self):
            return self.getToken(CexprParser.Constant, 0)

        def StringLiteral(self):
            return self.getToken(CexprParser.StringLiteral, 0)

        def LeftParen(self):
            return self.getToken(CexprParser.LeftParen, 0)

        def expression(self):
            return self.getTypedRuleContext(CexprParser.ExpressionContext,0)


        def RightParen(self):
            return self.getToken(CexprParser.RightParen, 0)

        def refExpr(self):
            return self.getTypedRuleContext(CexprParser.RefExprContext,0)


        def getRuleIndex(self):
            return CexprParser.RULE_baseExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseExpr" ):
                listener.enterBaseExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseExpr" ):
                listener.exitBaseExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseExpr" ):
                return visitor.visitBaseExpr(self)
            else:
                return visitor.visitChildren(self)




    def baseExpr(self):

        localctx = CexprParser.BaseExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_baseExpr)
        self._la = 0 # Token type
        try:
            self.state = 80
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 71
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 25190400) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 72
                self.baseExpr()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 73
                self.match(CexprParser.Constant)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 74
                self.match(CexprParser.StringLiteral)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 75
                self.match(CexprParser.LeftParen)
                self.state = 76
                self.expression()
                self.state = 77
                self.match(CexprParser.RightParen)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 79
                self.refExpr()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MultiplicativeExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def baseExpr(self):
            return self.getTypedRuleContext(CexprParser.BaseExprContext,0)


        def multiplicativeExpr(self):
            return self.getTypedRuleContext(CexprParser.MultiplicativeExprContext,0)


        def Star(self):
            return self.getToken(CexprParser.Star, 0)

        def Div(self):
            return self.getToken(CexprParser.Div, 0)

        def Mod(self):
            return self.getToken(CexprParser.Mod, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_multiplicativeExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiplicativeExpr" ):
                listener.enterMultiplicativeExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiplicativeExpr" ):
                listener.exitMultiplicativeExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplicativeExpr" ):
                return visitor.visitMultiplicativeExpr(self)
            else:
                return visitor.visitChildren(self)




    def multiplicativeExpr(self):

        localctx = CexprParser.MultiplicativeExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_multiplicativeExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 82
            self.baseExpr()
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0:
                self.state = 83
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 229376) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 84
                self.multiplicativeExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AdditiveExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def multiplicativeExpr(self):
            return self.getTypedRuleContext(CexprParser.MultiplicativeExprContext,0)


        def additiveExpr(self):
            return self.getTypedRuleContext(CexprParser.AdditiveExprContext,0)


        def Plus(self):
            return self.getToken(CexprParser.Plus, 0)

        def Minus(self):
            return self.getToken(CexprParser.Minus, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_additiveExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAdditiveExpr" ):
                listener.enterAdditiveExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAdditiveExpr" ):
                listener.exitAdditiveExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdditiveExpr" ):
                return visitor.visitAdditiveExpr(self)
            else:
                return visitor.visitChildren(self)




    def additiveExpr(self):

        localctx = CexprParser.AdditiveExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_additiveExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 87
            self.multiplicativeExpr()
            self.state = 90
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==13 or _la==14:
                self.state = 88
                _la = self._input.LA(1)
                if not(_la==13 or _la==14):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 89
                self.additiveExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ShiftExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def additiveExpr(self):
            return self.getTypedRuleContext(CexprParser.AdditiveExprContext,0)


        def shiftExpr(self):
            return self.getTypedRuleContext(CexprParser.ShiftExprContext,0)


        def LeftShift(self):
            return self.getToken(CexprParser.LeftShift, 0)

        def RightShift(self):
            return self.getToken(CexprParser.RightShift, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_shiftExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterShiftExpr" ):
                listener.enterShiftExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitShiftExpr" ):
                listener.exitShiftExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitShiftExpr" ):
                return visitor.visitShiftExpr(self)
            else:
                return visitor.visitChildren(self)




    def shiftExpr(self):

        localctx = CexprParser.ShiftExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_shiftExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.additiveExpr()
            self.state = 95
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==11 or _la==12:
                self.state = 93
                _la = self._input.LA(1)
                if not(_la==11 or _la==12):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 94
                self.shiftExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RelationalExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def shiftExpr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CexprParser.ShiftExprContext)
            else:
                return self.getTypedRuleContext(CexprParser.ShiftExprContext,i)


        def Less(self):
            return self.getToken(CexprParser.Less, 0)

        def Greater(self):
            return self.getToken(CexprParser.Greater, 0)

        def LessEqual(self):
            return self.getToken(CexprParser.LessEqual, 0)

        def GreaterEqual(self):
            return self.getToken(CexprParser.GreaterEqual, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_relationalExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRelationalExpr" ):
                listener.enterRelationalExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRelationalExpr" ):
                listener.exitRelationalExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRelationalExpr" ):
                return visitor.visitRelationalExpr(self)
            else:
                return visitor.visitChildren(self)




    def relationalExpr(self):

        localctx = CexprParser.RelationalExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_relationalExpr)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            self.shiftExpr()
            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if ((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0:
                self.state = 98
                _la = self._input.LA(1)
                if not(((_la) & ~0x3f) == 0 and ((1 << _la) & 1920) != 0):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()
                self.state = 99
                self.shiftExpr()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EqualityExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def relationalExpr(self):
            return self.getTypedRuleContext(CexprParser.RelationalExprContext,0)


        def equalityExpr(self):
            return self.getTypedRuleContext(CexprParser.EqualityExprContext,0)


        def Equal(self):
            return self.getToken(CexprParser.Equal, 0)

        def NotEqual(self):
            return self.getToken(CexprParser.NotEqual, 0)

        def getRuleIndex(self):
            return CexprParser.RULE_equalityExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEqualityExpr" ):
                listener.enterEqualityExpr(self)
